[metadata]
name = py-stylus-ui
version = 0.1.1
author = Demetris Stavrou
description = A user interface wrapper for xsetwacom.
url = https://github.com/demestav/py-stylus-ui
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Environment :: X11 Applications
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = py_stylus_ui
python_requires = >=3.7

[options.entry_points]
console_scripts =
    py-stylus-ui = py_stylus_ui.py_stylus_ui:cli

[flake8]
max-line-length = 88
extend-ignore = E203
dictionaries=en_US,python,technical
spellcheck-targets=comments
ignore=D100,D104
